# demo

./: DeleteFile.bat  README.md
cmake/: README.md
cmake/cmaketest1/: CMakeLists.txt  README.md  main.cpp
cmake/cmaketest1/src/: CMakeLists.txt
cmake/cmaketest1/src/dlldir/: MathDll.cpp  MathDll.h
cmake/cmaketest2/: README.md
cmake/cmaketest2/src/: CMakeLists.txt  CallFunction.cpp  CallFunction.h  main.cpp
cmake/cmaketest3/: README.md
cmake/cmaketest3/src/: CMakeLists.txt  main.cpp
cmake/cmaketest3/src/dlldir/: CMakeLists.txt
cmake/cmaketest4/: README.md
cmake/cmaketest4/src/: CMakeLists.txt  main.cpp
cmake/cmaketest4/src/dlldir/: CMakeLists.txt  test.cpp
cmake/cmaketest5/: README.md
cmake/cmaketest5/src/: CMakeLists.txt
cmake/cmaketest5/src/dlldir/: CMakeLists.txt
cmake/cmaketest6/: CMakeLists.txt  cmake6.cpp
cmake/cmaketest6/3rd/: 3rd.cpp  3rd.h  CMakeLists.txt
cmake/cmaketest7/: CmakeDemo.cpp
cmake/cmaketest7/3rd/include/: Dll1.h  UseMultip.cpp
cmake/cmaketest7/3rd/lib/Debug/: MathMultiply.lib
cmake/cmaketest7/src/: CMakeLists.txt  CmakeDemo7.cpp  CmakeDemo7.h  CmakeDemoDef.h
cmake/cmaketest7/src/3rd/include/: UseMultip.h
cmake/cmaketest7/src/3rd/lib/Debug/: StartUseDll.lib
cmake/cmaketest7/src/3rd/lib/Release/: MathMultiply.lib  StartUseDll.lib
cmake/cmaketest7/src/subdir1/: SubFunc1.cpp  SubFunc1.h
cmake/cmaketest7/src/subdir3/: SubFunc3.h
cmake/cmaketest7/subdir2/: SubFunc2.cpp  SubFunc2.h
cmake/cmaketest7/subdir3/: SubFunc3.cpp
io/epoll/: client.cpp  server.cpp
io/poll/: client.cpp  server  server.cpp
io/select/: client.cpp  makefile  select  select.cpp  select2
ipc/: README.md
ipc/pipe/: pipe_fork.c  pipe_friend.c
ipc/socket/: global.h  tcp_client.c  tcp_server.c  tcp_server_fork.c  udp_client.c  udp_server.c
network/: README.md
network/epoll/: makefile
network/poll/: client
network/select/: select2.cpp  server.cpp
qml/1_colorMaker/: colorMaker.pro  colormaker.h  main.cpp  main.qml
qml/2_cppqml/: cppqml.pro  cppqml.pro.user.1201f0c  main.cpp  main.qml  test.cpp  test.h
qml/3_ComboBox/: main.qml  qml.qrc
qml/4_FileDialog/: filedialog.pro.user.1201f0c  main.qml
qml/5_GridView/: gridview.pro  gridview.pro.user.1201f0c  icon.qrc  main.cpp  main.qml
qml/6_Image/: image.pro  image.pro.user.1201f0c  main.qml
qml/colorMaker/: colormaker.cpp
